--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-21 15:31:33
+lastsearch = 2024-07-21 16:16:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
 match = -21.4%%
-title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
+title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
 match = 21.4%%
@@ -27,9 +27,9 @@ title = Bộ chăn ga gối Litter Girl Ctt112
 url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
-match = 14.3%%
-title = Bộ ga gối chun chần xơ đậu nành mã 16 Lá tre voi
-url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html
+match = 0.0%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [thegioinem.com]
 match = 17.9%%
