--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-21 15:37:23
+lastsearch = 2024-07-21 16:15:16
 
 [anlacphat.com]
 match = -118.8%%
@@ -17,8 +17,8 @@ title = FD990-4WD
 url = https://thacoanlac.vn/forland-fd990-4wd
 
 [vietnamese.alibaba.com]
-match = -256.2%%
-title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm nước ...
+match = -225.0%%
+title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm ...
 url = https://vietnamese.alibaba.com/product-detail/Visionking-30-90x100-Bak4-FMC-Spotting-1601019269249.html
 
 [dutoan.gxd.vn]
@@ -100,4 +100,9 @@ url = https://www.dpreview.com/forums/thread/4232050
 match = -75.0%%
 title = Xe chòi chân trẻ em lắp ghép YH 8810-1
 url = https://docuabeyeu.com/san-pham/xe-choi-chan-lap-ghep-yh-8810-1/
+
+[dangtai.com.vn]
+match = -6.2%%
+title = Ống thủy tinh phi 18
+url = https://dangtai.com.vn/san-pham/ong-thuy-tinh-phi-18-2458.html
 
