--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-21 15:30:40
+lastsearch = 2024-07-21 16:16:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -417,9 +417,9 @@ title = SĂN DEAL TANJURO... - Hơi Thở Mặt Trời
 url = https://www.facebook.com/story.php?story_fbid=122155134374126177&id=61553785312238&post_id=61553785312238_122155134374126177
 
 [haiquanonline.com.vn]
-match = -157.1%%
-title = Hải quan Online- Tin nhanh về Hải quan, Tài chính, Xuất nhập ...
-url = https://haiquanonline.com.vn/
+match = -133.3%%
+title = Hải quan tham giá triệt phá 49 vụ vi phạm về ma túy trong ...
+url = https://haiquanonline.com.vn/hai-quan-tham-gia-triet-pha-49-vu-vi-pham-ve-ma-tuy-trong-thang-cao-diem-188146.html
 
 [baovinhphuc.com.vn]
 match = -104.8%%
