--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-21 15:49:03
+lastsearch = 2024-07-21 16:49:02
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -12,8 +12,8 @@ title = Bộ ga chun My Youth - MY14
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my14/
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+match = -14.3%%
+title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
@@ -22,9 +22,9 @@ title = BỘ CHĂN GA KẺ CARO MODAL 14 - La Sante Việt Nam
 url = https://lasantevn.com/bo-chan-ga-ke-caro-modal-14/
 
 [chandem.com.vn]
-match = 4.8%%
-title = Bộ chăn ga gối cao cấp Chang My P144
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
+match = 33.3%%
+title = Bộ chăn ga gối Pink Girl Y14
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-y14/
 
 [koala.vn]
 match = -38.1%%
