--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-21 14:46:14
+lastsearch = 2024-07-21 16:47:32
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -167,9 +167,9 @@ title = [tải trò chơi bài tiến lên] - Giải pháp và dịch vụ: 【F
 url = https://fvoupsjn.mescoffee.com/
 
 [www.facebook.com]
-match = -28.6%%
-title = Wilmar CLV Chef - 🍞✨SANDWICH TRÀ XANH VÀ BÔNG ...
-url = https://www.facebook.com/WilmarCLVChef/posts/sandwich-trà-xanh-và-bông-lan-đài-loan-hey-hey-những-ai-tự-nhận-mình-là-tín-đồ-c/862040000648537/
+match = -37.5%%
+title = THỐT NỐT CẦN THƠ
+url = https://www.facebook.com/groups/2935288726728317/
 
 [vinhhome.com]
 match = -71.4%%
