--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-21 15:14:21
+lastsearch = 2024-07-21 16:51:03
 
 [www.tiktok.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Toyota 22re engine??? Is it a good engine?
 url = https://www.race-dezert.com/forum/threads/toyota-22re-engine-is-it-a-good-engine.77620/
 
 [www.yotatech.com]
-match = 5.3%%
-title = no NE signal at ECU
-url = https://www.yotatech.com/forums/f116/no-ne-signal-ecu-231658/
+match = -20.8%%
+title = 22r in place of 22re - YotaTech Forums
+url = https://www.yotatech.com/forums/f116/22r-place-22re-241918/
 
 [www.diepxuan.com]
 match = -66.7%%
