--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-21 13:15:36
+lastsearch = 2024-07-21 16:48:30
 
 [www.linkedin.com]
 match = -145.5%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -145.5%%
-title = 2024 Mt. Tam Trail Run | Mill Valley
-url = https://www.runguides.com/event/4688/mt-tam-trail-run
+match = -318.2%%
+title = San Francisco Bay Area Running Race Calendar - 24/25
+url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
 match = -125.0%%
