--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-21 16:19:27
+lastsearch = 2024-07-21 16:52:41
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [uk.trip.com]
 match = -233.3%%
@@ -167,9 +167,9 @@ title = Tour giant TUI expects bright summer | REUTERS
 url = https://www.youtube.com/watch?v=cToNcnSxFgs
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
@@ -360,4 +360,9 @@ url = https://be.linkedin.com/company/tuigroup
 match = -191.7%%
 title = Cheap Flights to Tui with the Latest Price
 url = https://www.expedia.com/Cheap-Flights-To-Tui.d6047410.Travel-Guide-Flights
+
+[guide.michelin.com]
+match = -200.0%%
+title = Beldade – Tui - a MICHELIN Guide Restaurant
+url = https://guide.michelin.com/en/galicia/tui/restaurant/beldade
 
