--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-21 15:18:54
+lastsearch = 2024-07-21 17:36:47
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 17.9%%
-title = Chiếu nhựa nguyên sinh gấp gọn 1m8 x 3m
-url = https://www.sendo.vn/chieu-nhua-nguyen-sinh-gap-gon-1m8-x-3m-hang-viet-nam-chat-luong-cao-116062190.html
+match = 42.9%%
+title = chiếu nhựa thái 1m8x3m - sp 66677
+url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
 
 [mia.vn]
 match = -39.3%%
