--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-21 12:45:42
+lastsearch = 2024-07-21 17:38:47
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -109,12 +109,12 @@ url = https://www.newhomesource.com/learn/8-surfire-ways-to-annoy-your-hoa/
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -70.6%%
-title = Chapter 720 - 2023 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2023/Chapter720/All
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
 
 [www.navy.mil]
 match = -23.5%%
@@ -470,4 +470,9 @@ url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-
 match = -147.1%%
 title = Home | Occupational Safety and Health Administration
 url = https://www.osha.gov/
+
+[www.fincen.gov]
+match = -16.7%%
+title = BOI FAQs Q&A
+url = https://www.fincen.gov/sites/default/files/shared/BOI-FAQs-QA-508C.pdf
 
