--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-21 16:50:52
+lastsearch = 2024-07-21 17:30:50
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -13,8 +13,8 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 
 [demxanh.com]
 match = -19.0%%
-title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+title = Đệm bông ép chính hãng giảm 50 ...
+url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -28,8 +28,8 @@ url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-A
 
 [sieuthidemonline.vn]
 match = -61.9%%
-title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
