--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-21 06:30:01
+lastsearch = 2024-07-21 18:12:28
 
 [demxanh.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
 url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.lazada.vn]
-match = -87.0%%
-title = Chiếu trúc tre chiếu cao bằng tây bắc nhiều cỡ đủ size tăm ...
-url = https://www.lazada.vn/products/chieu-truc-tre-chieu-cao-bang-tay-bac-nhieu-co-du-size-tam-hoa-i1312559243.html
+match = -69.6%%
+title = Chiếu trúc Cao Bằng chiếu trúc tăm Tây Bắc chất lượng ...
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-chieu-truc-tam-tay-bac-chat-luong-cao-1m5-1m6-1m8-i656876366.html
 
 [shopee.vn]
 match = 43.5%%
