--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-21 14:26:45
+lastsearch = 2024-07-21 18:17:59
 
 [www.zillow.com]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Regal Hollywood - Gainesville Movie Tickets and ...
 url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -69.2%%
+title = Senoia Police Department, GA
+url = https://www.facebook.com/senoiapolice/
 
 [www.bpas.org]
 match = -184.6%%
