--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-21 14:14:49
+lastsearch = 2024-07-21 18:18:32
 
 [demxanh.com]
 match = -41.2%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/tham-trai-san-bali.html
 [tiki.vn]
 match = -141.2%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
 
 [www.lazada.vn]
 match = -158.8%%
